--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+      "start": "node index.js",
+    "test": "jest --watch",
+    "client": "cd client && npm start",
+    "dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
+    "client:build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -41,5 +46,9 @@
     "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0",
     "supertest": "^6.0.1"
+  }
+  ,
+  "jest": {
+    "testEnvironment": "node"
   }
 }
