--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "migrate-rollback":"npx knex migrate:rollback",
+    "migrate-latest":"npx knex migrate:latest",
+    "git-add":"git add .",
+    "git-commit":"git commit -m 'auto updated' ",
+    "git-push":"git push"
   },
   "repository": {
     "type": "git",
